Fixed overlapping arrow nav in template page
Added new css classes to nav items
Placed grid around nav items

--- a/css/main.css
+++ b/css/main.css
@@ -155,10 +155,14 @@ footer > h2 {
 	text-align: center;
 }
 
-.work-nav > a {
-	width: 50px;
-	padding-top: 1em;
-	margin: 0.5em;
+.arrow-btn {
+	width: 30%;
+	margin-top: 0.5em;
+	display: inline-block;
+
+}
+
+.home-btn {
 	display: inline-block;
 	text-decoration: none;
 	color: black;
